<resources>
    <string name="app_name">SurvLogic</string>
    <string name="general_save">Save</string>
    <string name="general_finish">Finish</string>
    <string name="general_on">On</string>
    <string name="general_off">Off</string>
    <string name="general_finished">Done</string>
    <string name="general_cancel">Cancel</string>
    <string name="general_edit">Edit</string>
    <string name="general_start">Start</string>
    <string name="general_stop">Stop</string>
    <string name="general_yes">Yes</string>
    <string name="general_no">No</string>
    <string name="general_add">Add</string>
    <string name="general_post">Post</string>
    <string name="general_clear">Clear</string>
    <string name="general_none">None</string>
    <string name="general_solve">Solve</string>
    <string name="general_delete">Delete</string>
    <string name="general_open">Open</string>
    <string name="general_close">Close</string>
    <string name="general_share">Share</string>
    <string name="general_unit_meters">%1$.1f m</string>
    <string name="general_unit_feet">%1$.1f ft</string>
    <string name="general_exit_app">"Please click BACK again to exit"</string>
    <string name="general_loading_status">Loading…</string>
    <string name="general_blank"> </string>
    <string name="general_default">default</string>
    <string name="general_menu_settings">Settings</string>
    <string name="general_menu_about">About</string>
    <string name="general_options">Options</string>
    <string name="general_results_open">Show Results</string>
    <string name="general_results_close">Close Results</string>
    <string name="activity_main_toolbar_title">Welcome</string>
    <string name="navigation_header_value1">Welcome to survLOGIC</string>
    <string name="navigation_main_new_project">Create New Project</string>
    <string name="navigation_main_open_project">Open Existing Project</string>
    <string name="navigation_main_start_gps_survey">Start GPS Survey</string>
    <string name="navigation_main_start_test_activity">Test Activity</string>
    <string name="navigation_main_settings">Settings</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="navigation_job_header_value1">Job Menu</string>
    <string name="navigation_job_value_1">Home</string>
    <string name="navigation_job_value_2">Point Menu</string>
    <string name="navigation_job_value_3">COGO Menu</string>
    <string name="navigation_job_value_4">GPS Survey Menu</string>
    <string name="navigation_job_value_5">Job Settings</string>
    <string name="toolbar_main_menu_item1">About</string>
    <string name="toolbar_gps_survey_menu_item1">Settings</string>
    <string name="toolbar_gps_survey_menu_item2">About</string>
    <string name="progress_title_Refreshing">Loading...</string>
    <string name="dialog_delete_image">Remove this photo?</string>
    <string name="gps_title_header">Onboard GPS</string>
    <string name="gps_app_switch_off">Survey</string>
    <string name="gps_app_switch_on">Stake</string>
    <string name="debug_error_gps_not_found">This device does not Support GPS Locations</string>
    <string name="enable_gps_message">GPS Service is disabled.  Would you like to enable it now?</string>
    <string name="gps_warm_boot_go">Started GNSS Services \nInterval = %1$ss min. \nDist. = %2$sm</string>
    <string name="gps_stop">GNSS Services Terminated</string>
    <string name="gps_pause">GNSS Services Paused</string>
    <string name="header_gnss_status">GNSS Status</string>
    <string name="header_accuracy_status">Accuracy:</string>
    <string name="gnss_status_default">Waiting</string>
    <string name="gnss_status_search">Searching…</string>
    <string name="gnss_status_no_fix">No Fix</string>
    <string name="gnss_status_autonomous">Autonomous</string>
    <string name="gnss_status_float">Float</string>
    <string name="gnss_status_fix">3D Fix</string>
    <string name="header_gps_position">Current Position</string>
    <string name="header_gps_logdata">Log Dataset</string>
    <string name="header_gps_logdata_default">Waiting to Log Data</string>
    <string name="gps_satellites_default">00</string>
    <string name="gps_pdop_default">PDOP:</string>
    <string name="gps_hdop_default">HDOP:</string>
    <string name="gps_vdop_default">VDOP:</string>
    <string name="gps_height_default">HI:</string>
    <string name="gps_pdop_value">PDOP: %1$.1f</string>
    <string name="gps_hdop_value">HDOP: %1$.1f</string>
    <string name="gps_vdop_value">VDOP: %1$.1f</string>
    <string name="gps_height_value">HI: %1$.1f</string>
    <string name="gps_ttff_default">TTFF:</string>
    <string name="gps_ttff_value">TTFF:</string>
    <string name="header_epoch_lbl">Epoch:</string>
    <string name="header_epoch_value">Epoch: (%1$s s) </string>
    <string name="epoch_default">0</string>
    <string name="satellite_default">0</string>
    <string name="gps_latitude_default">Latitude:</string>
    <string name="gps_longitude_default">Longitude:</string>
    <string name="gps_ellipsoid_default">Ellipsoid:</string>
    <string name="gps_msl_default">Ortho Height:</string>
    <string name="gps_latitude_value_string">Latitude: %1$s</string>
    <string name="gps_longitude_value_string">Longitude: %1$s</string>
    <string name="gps_latitude_value">Latitude: %1$.7f\u00B0</string>
    <string name="gps_longitude_value">Longitude: %1$.7f\u00B0</string>
    <string name="gps_ellipsoid_value_metric">Ellipsoid: %1$.1f m</string>
    <string name="gps_ellipsoid_value_feet">Ellipsoid: %1$.1f ft</string>
    <string name="gps_msl_value_metric">Ortho Height: %1$.1f m</string>
    <string name="gps_msl_value_feet">Ortho Height: %1$.1f ft</string>
    <string name="gps_log_raw_value">Lat: %1$s, Long: %2$s, El: %3$s</string>
    <string name="gps_cn0_label">C/N0</string>
    <string name="gps_snr_label">SNR</string>
    <string name="title_activity_maps">Map</string>
    <string name="gps_status_prn_header">ID</string>
    <string name="gps_status_prn_id">##</string>
    <string name="gps_status_signal_strength_header">S/NO</string>
    <string name="gps_status_signal_strength_default">##.#</string>
    <string name="gps_status_elevation_header">Elev.</string>
    <string name="gps_status_elevation_default">##.#\u00B0</string>
    <string name="gps_status_elevation_value">%1$s\u00B0</string>
    <string name="gps_status_azimuth_header">Azimuth</string>
    <string name="gps_status_azimuth_default">##.#\u00B0</string>
    <string name="gps_status_azimuth_value">%1$s\u00B0</string>
    <string name="gps_status_flags_header">Flags</string>
    <string name="gps_status_ephemeris_default">Ephemeris</string>
    <string name="gps_status_almanac_default">Almanac</string>
    <string name="gps_status_constellation_header">From</string>
    <string name="gps_status_lat_default">Lat:</string>
    <string name="gps_status_lat_value_string">Lat: %1$s</string>
    <string name="gps_status_projection_northing_value_string">N: %1$s</string>
    <string name="gps_status_long_default">Lon:</string>
    <string name="gps_status_long_value_string">Lon: %1$s</string>
    <string name="gps_status_projection_easting_value_string">E: %1$s</string>
    <string name="title_activity_settings">Settings</string>
    <string name="project_card_location_geo">Lat: %1$s, Long: %2$s</string>
    <string name="project_card_last_modified_date_create">Created on %1$s</string>
    <string name="project_card_last_modified_date_accessed">Last Opened on %1$s</string>
    <string name="project_card_last_modified_date_modified">Last Edited on %1$s</string>
    <string name="project_new_header_1">Project Name</string>
    <string name="project_new_header_2">Storage</string>
    <string name="project_new_header_3">Units</string>
    <string name="project_new_header_4">Location</string>
    <string name="project_new_header_5">Project Photo</string>
    <string name="project_new_header_6">Projection</string>
    <string name="project_new_header_7">Zone</string>
    <string name="project_new_header_8">Geographic Coordinates</string>
    <string name="project_new_header_9">Grid Coordinates</string>
    <string name="project_new_name_hint">Enter the name of the Project</string>
    <string name="project_new_storage_prompt">Choose where the Project is Stored</string>
    <string name="project_new_units_prompt">Select unit of measurements</string>
    <string name="project_new_projection_prompt">Select Projection</string>
    <string name="project_new_projection_zone_prompt">Select Zone</string>
    <string name="project_new_location_latitude_title">Latitude: </string>
    <string name="project_new_location_latitude_default">Latitude:  (Not Defined)</string>
    <string name="project_new_location_latitude_value">Latitude:  %1$s</string>
    <string name="project_new_location_longitude_title">Longitude: </string>
    <string name="project_new_location_longitude_default">Longitude:  (Not Defined)</string>
    <string name="project_new_location_longitude_value">Longitude:  %1$s</string>
    <string name="project_new_location_height_title">Ellipsoid: </string>
    <string name="project_new_location_height_default">Ellipsoid:  (Not Defined)</string>
    <string name="project_new_photo_button_label">Choose Picture</string>
    <string name="project_details_menu_item_new_job">Create New Job</string>
    <string name="dialog_job_point_item_header_pointno">NO.</string>
    <string name="dialog_job_point_item_header_northing">NORTHING</string>
    <string name="dialog_job_point_item_header_easting">EASTING</string>
    <string name="dialog_job_point_item_header_elevation">ELEVATION</string>
    <string name="dialog_job_point_item_header_description_short">DESC.</string>
    <string name="tools_curve_header">Curve Solution</string>
    <string name="tools_curve_delta">Delta (\u0394):</string>
    <string name="tools_curve_radius">Radius:</string>
    <string name="tools_curve_length">Length:</string>
    <string name="tools_curve_tangent">Tangent:</string>
    <string name="tools_curve_chordDistance">Chord:</string>
    <string name="pref_header_job_current_general">General</string>
    <string name="pref_header_job_current_notes">Job Notes</string>
    <string name="pref_header_job_current_display">Display/Entry Defaults</string>
    <string name="pref_header_job_current_raw_data">Raw Data</string>
    <string name="pref_header_job_current_options">Options</string>
    <string name="pref_header_job_current_display_category_raw_data">Raw Data</string>
    <string name="pref_header_job_current_display_category_code_list">Coding</string>
    <string name="pref_current_job_raw_data_file">Save Raw Data</string>
    <string name="pref_current_job_raw_data_file_summary">Create a separate file that stores observation data and metadata</string>
    <string name="pref_current_job_raw_data_time_stamp">Place Timestamp on Each Point</string>
    <string name="pref_current_job_raw_data_gps_attributes">Place GPS metadata on Each Observation</string>
    <string name="pref_current_job_raw_data_code_table">Use Code Table for Descriptions</string>
    <string name="pref_current_job_raw_data_code_table_summary">Future</string>
    <string name="pref_gps_ar_header_location">Location</string>
    <string name="pref_gps_ar_header_sensor">Sensor</string>
    <string name="pref_gps_ar_location_use_prediction_title">Filter Locations</string>
    <string name="pref_gps_ar_location_use_prediction_summary">Adjust raw locations with Kalman Filter for better quality locations</string>
    <string name="pref_gps_ar_sensor_use_fusion_title">Use Fusion Sensor Array</string>
    <string name="pref_gps_ar_sensor_use_gmf_title">Use GMF Declination</string>
    <string name="pref_gps_ar_sensor_use_gmf_summary">Apply the geomagnetic declination to sensor reading</string>
</resources>