<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_gps_ar_header_location">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_gps_location_use_prediction"
            android:summary="@string/pref_gps_ar_location_use_prediction_summary"
            android:title="@string/pref_gps_ar_location_use_prediction_title" />


    </PreferenceCategory>


    <PreferenceCategory android:title="@string/pref_gps_ar_header_sensor">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_gps_location_sensor_use_fusion"
            android:summary="@string/pref_gps_ar_sensor_use_fusion_title"
            android:title="@string/pref_gps_ar_sensor_use_fusion_title" />


        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_gps_location_sensor_use_gmf"
            android:summary="@string/pref_gps_ar_sensor_use_gmf_summary"
            android:title="@string/pref_gps_ar_sensor_use_gmf_title" />


    </PreferenceCategory>





</PreferenceScreen>