<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">

        <item
            android:id="@+id/menu_item1_id"
            android:icon="@drawable/ic_create_new_project"
            android:title="@string/navigation_job_value_1">

        </item>

        <item
            android:id="@+id/menu_item2_id"
            android:icon="@drawable/ic_project_open"
            android:title="@string/navigation_job_value_2">
            
        </item>

        <item
            android:id="@+id/menu_item3_id"
            android:icon="@drawable/ic_add_location"
            android:title="@string/navigation_job_value_3">

        </item>

        <item
        android:id="@+id/menu_item4_id"
        android:icon="@drawable/ic_project_open"
        android:title="@string/navigation_job_value_4">

    </item>

        <item
            android:id="@+id/menu_item5_id"
            android:icon="@drawable/ic_project_open"
            android:title="@string/navigation_job_value_5">

        </item>


    </group>


</menu>