<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.survlogic.survlogic.activity.SettingsCurrentJobActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_job_current_general" />

    <header
        android:fragment="com.survlogic.survlogic.activity.SettingsCurrentJobActivity$NotesPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_job_current_notes" />

    <header
        android:fragment="com.survlogic.survlogic.activity.SettingsCurrentJobActivity$DisplayPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_job_current_display" />

    <header
        android:fragment="com.survlogic.survlogic.activity.SettingsCurrentJobActivity$RawDataPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_job_current_raw_data" />

    <header
        android:fragment="com.survlogic.survlogic.activity.SettingsCurrentJobActivity$OptionsPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_job_current_options" />

</preference-headers>
