<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_in_project_new"
        layout="@layout/toolbar_no_logo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <LinearLayout
        android:id="@+id/layout_area_1"
        android:layout_below="@id/toolbar_in_project_new"
        android:orientation="vertical"
        android:weightSum="2"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:text="@string/project_new_header_1"
            android:layout_weight="1"
            android:gravity="bottom"
            android:layout_marginBottom="2dp"
            android:layout_width="match_parent"
            android:layout_height="0dp" />


        <EditText
            android:hint="@string/project_new_name_hint"
            android:background="@drawable/editbox_dropdown_background"
            android:paddingStart="10dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_area_2"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@id/layout_area_1"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="2"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="10dp"
            android:layout_width="0dp"
            android:layout_height="70dp">

            <TextView
                android:text="@string/project_new_header_2"
                android:layout_weight="1"
                android:gravity="bottom"
                android:layout_marginBottom="2dp"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <RelativeLayout
                android:background="@drawable/editbox_dropdown_background"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <Spinner
                    android:id="@+id/storage_prompt_in_project_new"
                    android:entries="@array/project_storage_values"
                    android:prompt="@string/project_new_storage_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="2"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="10dp"
            android:layout_width="0dp"
            android:layout_height="70dp">

            <TextView
                android:text="@string/project_new_header_3"
                android:layout_weight="1"
                android:gravity="bottom"
                android:layout_marginBottom="2dp"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <RelativeLayout
                android:background="@drawable/editbox_dropdown_background"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <Spinner
                    android:id="@+id/units_prompt_in_project_new"
                    android:entries="@array/unit_measure_entries_short"
                    android:prompt="@string/project_new_units_prompt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_area_3"
        android:layout_below="@id/layout_area_2"
        android:orientation="vertical"
        android:weightSum="2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:text="@string/project_new_header_4"
            android:layout_weight=".5"
            android:gravity="bottom"
            android:layout_marginBottom="2dp"
            android:layout_width="match_parent"
            android:layout_height="0dp" />


        <RelativeLayout
            android:background="@drawable/editbox_dropdown_background"
            android:layout_weight="1.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/location_latitude"
                android:text="@string/project_new_location_latitude_default"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/location_longitude"
                android:text="@string/project_new_location_longitude_default"
                android:layout_below="@id/location_latitude"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageButton
                android:background="@drawable/button_default_normal"
                android:src="@drawable/ic_add_location"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_width="50dp"
                android:layout_height="match_parent" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_area_4"
        android:layout_below="@id/layout_area_3"
        android:orientation="vertical"
        android:weightSum="2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:text="@string/project_new_header_5"
            android:layout_weight=".5"
            android:gravity="bottom"
            android:layout_marginBottom="2dp"
            android:layout_width="match_parent"
            android:layout_height="0dp" />


        <RelativeLayout
            android:background="@drawable/editbox_dropdown_background"
            android:layout_weight="1.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/photo_camera_image"
                android:src="@drawable/ic_camera_full"
                android:layout_centerVertical="true"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <Button
                android:text="@string/project_new_photo_button_label"
                android:layout_toEndOf="@id/photo_camera_image"
                android:textAllCaps="false"
                style="@style/Base.TextAppearance.AppCompat"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/layout_area_footer"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <Button
            android:text="@string/general_save"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <Button
            android:text="@string/general_cancel"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>



</RelativeLayout>