<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="250dp">

    <LinearLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/tools_curve_header"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:weightSum="100"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/tools_curve_delta"
            android:layout_marginStart="10dp"
            android:layout_weight="30"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/curve_delta"
            android:textColor="@color/colorPrimary"
            android:layout_weight="69"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:weightSum="100"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/tools_curve_radius"
            android:layout_marginStart="10dp"
            android:layout_weight="30"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/curve_radius"
            android:textColor="@color/colorPrimary"
            android:layout_weight="69"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:weightSum="100"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/tools_curve_length"
            android:layout_marginStart="10dp"
            android:layout_weight="30"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/curve_length"
            android:textColor="@color/colorPrimary"
            android:layout_weight="69"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:weightSum="100"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/tools_curve_tangent"
            android:layout_marginStart="10dp"
            android:layout_weight="30"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/curve_tangent"
            android:textColor="@color/colorPrimary"
            android:layout_weight="69"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:weightSum="100"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/tools_curve_chordDistance"
            android:layout_marginStart="10dp"
            android:layout_weight="30"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/curve_chord_distance"
            android:textColor="@color/colorPrimary"
            android:layout_weight="69"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>







</LinearLayout>